--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,7 @@ jobs:
 
     steps:
     - name: Build the Docker image
+      uses: actions/checkout@v3
       with:
         registry: ghcr.io
         username: "yk2kus"
